--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 # REQUIRED CONFIG
 BOT_TOKEN = "5492249797:AAGe4aviKOQ_oo-XswhV66MYiRGL5BJ7Px4"
-GDRIVE_FOLDER_ID = "0AADoLrBGz6JQUk9PVA"
+GDRIVE_FOLDER_ID = "0AMEGzkqjUbREUk9PVA"
 OWNER_ID = 783972422
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 7
